--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
           <div class="team-member">
             <img class="mx-auto rounded-circle" src="img/team/amanda.jpg" alt="">
             <h4>Amanda Abbott</h4>
-            <p class="text-muted">Apprentice Instructor</p>
+            <p class="text-muted">Instructor</p>
             <ul class="list-inline social-buttons">
               <li class="list-inline-item">
                 <a href="#">
