Update meta properties

--- a/index.html
+++ b/index.html
@@ -5,8 +5,11 @@
 
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <meta name="description" content="">
-  <meta name="author" content="">
+  <meta property="og:title" content="One Step at a Time - Ballroom Dancing">
+  <meta property="og:description" content="Ballroom dance lessons for singles or couples.">
+  <meta property="og:image" content="./img/header-bg.jpg">
+  <meta property="og:url" content="https://kjc17710.github.io/dancing-alpaca/">
+  <meta name="twitter:card" content="summary_large_image">
 
   <title>One Step at a Time</title>
 
